Fix trivial license issues introduced by Emma
I just extended <licenseMerge>.

--- a/wayang-api/wayang-api-emma/emma-examples/pom.xml
+++ b/wayang-api/wayang-api-emma/emma-examples/pom.xml
@@ -20,8 +20,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>emma</artifactId>
         <groupId>org.emmalanguage</groupId>
+        <artifactId>wayang-api-emma</artifactId>
         <version>0.2-SNAPSHOT</version>
     </parent>
 
