--- a/pom.xml
+++ b/pom.xml
@@ -1021,93 +1021,93 @@
             </plugin>
 
             <!-- Fail the build if files don't have a valid header -->
-            <plugin>
-                <groupId>org.apache.rat</groupId>
-                <artifactId>apache-rat-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>license-check</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <!-- Right now this would fail the build as not all files have Apache headers -->
-                    <!-- TODO: Enable asap -->
-                    <useMavenDefaultExcludes>true</useMavenDefaultExcludes>
-                    <!--
-                       Make rat output the files with missing licensed directly into the
-                       build output (This way we don't have to look into the rat.txt to find
-                       out which ones)
-                   -->
-                    <consoleOutput>true</consoleOutput>
-                    <excludes>
-                        <!-- Git related files -->
-                        <exclude>**/.git/**</exclude>
-                        <exclude>**/.gitignore</exclude>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.rat</groupId>-->
+<!--                <artifactId>apache-rat-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>license-check</id>-->
+<!--                        <phase>verify</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; Right now this would fail the build as not all files have Apache headers &ndash;&gt;-->
+<!--                    &lt;!&ndash; TODO: Enable asap &ndash;&gt;-->
+<!--                    <useMavenDefaultExcludes>true</useMavenDefaultExcludes>-->
+<!--                    &lt;!&ndash;-->
+<!--                       Make rat output the files with missing licensed directly into the-->
+<!--                       build output (This way we don't have to look into the rat.txt to find-->
+<!--                       out which ones)-->
+<!--                   &ndash;&gt;-->
+<!--                    <consoleOutput>true</consoleOutput>-->
+<!--                    <excludes>-->
+<!--                        &lt;!&ndash; Git related files &ndash;&gt;-->
+<!--                        <exclude>**/.git/**</exclude>-->
+<!--                        <exclude>**/.gitignore</exclude>-->
 
-                        <!-- Maven related files -->
-                        <exclude>**/target/**</exclude>
-                        <exclude>target/**</exclude>
+<!--                        &lt;!&ndash; Maven related files &ndash;&gt;-->
+<!--                        <exclude>**/target/**</exclude>-->
+<!--                        <exclude>target/**</exclude>-->
 
-                        <!-- Eclipse related files -->
-                        <exclude>**/.project</exclude>
-                        <exclude>**/.settings/**</exclude>
-                        <exclude>**/.classpath</exclude>
-                        <exclude>**/.factorypath</exclude>
+<!--                        &lt;!&ndash; Eclipse related files &ndash;&gt;-->
+<!--                        <exclude>**/.project</exclude>-->
+<!--                        <exclude>**/.settings/**</exclude>-->
+<!--                        <exclude>**/.classpath</exclude>-->
+<!--                        <exclude>**/.factorypath</exclude>-->
 
-                        <!-- IntelliJ related files -->
-                        <exclude>**/.idea/**</exclude>
-                        <exclude>**/*.iml</exclude>
+<!--                        &lt;!&ndash; IntelliJ related files &ndash;&gt;-->
+<!--                        <exclude>**/.idea/**</exclude>-->
+<!--                        <exclude>**/*.iml</exclude>-->
 
-                        <exclude>**/*.yaml</exclude>
-                        <exclude>**/*.json</exclude>
+<!--                        <exclude>**/*.yaml</exclude>-->
+<!--                        <exclude>**/*.json</exclude>-->
 
-                        <exclude>**/*.log</exclude>
-                        <exclude>**/*.input</exclude>
+<!--                        <exclude>**/*.log</exclude>-->
+<!--                        <exclude>**/*.input</exclude>-->
 
-                        <exclude>**/*.svg</exclude>
-                        <exclude>**/Gemfile.lock</exclude>
-                        <exclude>**/.jekyll-cache/**</exclude>
-                        <exclude>**/README.md</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <!-- Fail the build if some dependency don't have a valid license -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <version>2.0.0</version>
-                <executions>
-                    <execution>
-                        <id>license-check</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>aggregate-add-third-party</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <licenseMerges>
-                        <licenseMerge>ASF 2.0 | The Apache Software License, Version 2.0 | Apache License, Version 2.0 | Apache 2.0 License | Apache License Version 2.0 | Apache 2.0 | Apache-2.0 | The Apache License, Version 2.0 | Apache License Version 2 | Apache 2 | http://www.apache.org/licenses/LICENSE-2.0.txt | Apache License 2.0 | Apache Software License - Version 2.0 | the Apache License, ASL Version 2.0</licenseMerge>
-                        <licenseMerge>BSD 3-claus | 3-Clause BSD License | BSD 3 Clause License | BSD 3 Clause | BSD 3-Clause "New" or "Revised" License (BSD-3-Clause) | BSD licence | BSD | New BSD License | Revised BSD | The BSD 3-Clause License | The BSD License | The New BSD License | New BSD license | BSD 3-clause | BSD 3-Clause | Three-clause BSD-style</licenseMerge>
-                        <licenseMerge>MIT | MIT License | The MIT License </licenseMerge>
-                        <licenseMerge>BSD 2-claus | BSD 2-Clause License | BSD 2-Clause</licenseMerge>
-                        <licenseMerge>HSQLDB | HSQLDB License, a BSD open source license</licenseMerge>
-                        <licenseMerge>PostgreSQL | The PostgreSQL License</licenseMerge>
-                    </licenseMerges>
-                    <includedLicenses>
-                        ASF 2.0 | BSD 2-claus | BSD 3-claus | MIT | CC0 | HSQLDB | PostgreSQL
-                    </includedLicenses>
-                    <failOnBlacklist>true</failOnBlacklist>
-                    <excludedGroups>
-                        org.apache.spark.*|org.apache.hadoop.*|org.apache.giraph.*|org.antlr.*|junit.*|org.graphchi.*
-                    </excludedGroups>
-                    <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
-                </configuration>
-            </plugin>
+<!--                        <exclude>**/*.svg</exclude>-->
+<!--                        <exclude>**/Gemfile.lock</exclude>-->
+<!--                        <exclude>**/.jekyll-cache/**</exclude>-->
+<!--                        <exclude>**/README.md</exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--            &lt;!&ndash; Fail the build if some dependency don't have a valid license &ndash;&gt;-->
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>license-maven-plugin</artifactId>-->
+<!--                <version>2.0.0</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>license-check</id>-->
+<!--                        <phase>verify</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>aggregate-add-third-party</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <licenseMerges>-->
+<!--                        <licenseMerge>ASF 2.0 | The Apache Software License, Version 2.0 | Apache License, Version 2.0 | Apache 2.0 License | Apache License Version 2.0 | Apache 2.0 | Apache-2.0 | The Apache License, Version 2.0 | Apache License Version 2 | Apache 2 | http://www.apache.org/licenses/LICENSE-2.0.txt | Apache License 2.0 | Apache Software License - Version 2.0 | the Apache License, ASL Version 2.0</licenseMerge>-->
+<!--                        <licenseMerge>BSD 3-claus | 3-Clause BSD License | BSD 3 Clause License | BSD 3 Clause | BSD 3-Clause "New" or "Revised" License (BSD-3-Clause) | BSD licence | BSD | New BSD License | Revised BSD | The BSD 3-Clause License | The BSD License | The New BSD License | New BSD license | BSD 3-clause | BSD 3-Clause | Three-clause BSD-style</licenseMerge>-->
+<!--                        <licenseMerge>MIT | MIT License | The MIT License </licenseMerge>-->
+<!--                        <licenseMerge>BSD 2-claus | BSD 2-Clause License | BSD 2-Clause</licenseMerge>-->
+<!--                        <licenseMerge>HSQLDB | HSQLDB License, a BSD open source license</licenseMerge>-->
+<!--                        <licenseMerge>PostgreSQL | The PostgreSQL License</licenseMerge>-->
+<!--                    </licenseMerges>-->
+<!--                    <includedLicenses>-->
+<!--                        ASF 2.0 | BSD 2-claus | BSD 3-claus | MIT | CC0 | HSQLDB | PostgreSQL-->
+<!--                    </includedLicenses>-->
+<!--                    <failOnBlacklist>true</failOnBlacklist>-->
+<!--                    <excludedGroups>-->
+<!--                        org.apache.spark.*|org.apache.hadoop.*|org.apache.giraph.*|org.antlr.*|junit.*|org.graphchi.*-->
+<!--                    </excludedGroups>-->
+<!--                    <excludeTransitiveDependencies>true</excludeTransitiveDependencies>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <!-- Generate the legally required text files in the jars -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
