--- a/wayang-api/wayang-api-emma/pom.xml
+++ b/wayang-api/wayang-api-emma/pom.xml
@@ -106,7 +106,7 @@
         <maven-shade-plugin.version>2.4.1</maven-shade-plugin.version>
         <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>
+        <scala-maven-plugin.version>3.3.3</scala-maven-plugin.version>
         <scalatest-maven-plugin.version>1.0</scalatest-maven-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
 
@@ -121,7 +121,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- Scala -->
-        <scala.version>2.11.11</scala.version>
+        <scala.version>2.11.12</scala.version>
         <scala.tools.version>2.11</scala.tools.version>
 
         <!-- Type-level -->
@@ -130,11 +130,6 @@
 
         <!-- Hadoop -->
         <hadoop.version>2.8.0</hadoop.version>
-        <!-- Flink -->
-        <flink.version>1.2.1</flink.version>
-        <!-- Spark -->
-        <spark.version>2.2.0</spark.version>
-        <spark.indexedrdd.version>0.4.0</spark.indexedrdd.version>
         <!-- Parquet -->
         <parquet.version>1.9.0</parquet.version>
 
@@ -159,8 +154,6 @@
         <excludedSurefireGroups>org.emmalanguage.examples.ExampleTest</excludedSurefireGroups>
         <compile-spec-pipelines>false</compile-spec-pipelines>
         <scala.scope>provided</scala.scope>
-        <spark.scope>provided</spark.scope>
-        <flink.scope>provided</flink.scope>
         <hadoop.scope>provided</hadoop.scope>
     </properties>
 
@@ -172,13 +165,13 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <repositories>
-        <!-- Spark Packages Repo -->
-        <repository>
-            <id>spark</id>
-            <url>http://dl.bintray.com/spark-packages/maven</url>
-        </repository>
-    </repositories>
+<!--    <repositories>-->
+<!--        &lt;!&ndash; Spark Packages Repo &ndash;&gt;-->
+<!--        <repository>-->
+<!--            <id>spark</id>-->
+<!--            <url>http://dl.bintray.com/spark-packages/maven</url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 
     <dependencyManagement>
         <dependencies>
@@ -210,11 +203,6 @@
             </dependency>
             <dependency>
                 <groupId>org.emmalanguage</groupId>
-                <artifactId>emma-lib</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.emmalanguage</groupId>
                 <artifactId>emma-examples</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -222,13 +210,6 @@
             <dependency>
                 <groupId>org.emmalanguage</groupId>
                 <artifactId>emma-language</artifactId>
-                <version>${project.version}</version>
-                <type>test-jar</type>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.emmalanguage</groupId>
-                <artifactId>emma-lib</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
@@ -603,8 +584,6 @@
             <id>provided-as-compile</id>
             <properties>
                 <scala.scope>compile</scala.scope>
-                <flink.scope>compile</flink.scope>
-                <spark.scope>compile</spark.scope>
                 <hadoop.scope>compile</hadoop.scope>
             </properties>
         </profile>
@@ -683,7 +662,6 @@
 
     <modules>
         <module>emma-language</module>
-        <module>emma-lib</module>
         <module>emma-examples</module>
     </modules>
 
