--- a/wayang-api/wayang-api-emma/pom.xml
+++ b/wayang-api/wayang-api-emma/pom.xml
@@ -401,68 +401,68 @@
         </pluginManagement>
 
         <plugins>
-            <!-- Scala compiler -->
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>${scala-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <!-- Predicated plugin -->
-                    <skip>${scala-maven-plugin.skip}</skip>
-                    <!-- Configuration -->
-                    <scalaCompatVersion>${scala.tools.version}</scalaCompatVersion>
-                    <scalaVersion>${scala.version}</scalaVersion>
-                    <recompileMode>incremental</recompileMode>
-                    <useZincServer>true</useZincServer>
-                    <compilerPlugins>
-                        <compilerPlugin>
-                            <groupId>org.scalamacros</groupId>
-                            <artifactId>paradise_${scala.version}</artifactId>
-                            <version>2.1.0</version>
-                        </compilerPlugin>
-                    </compilerPlugins>
-                    <jvmArgs>
-                        <jvmArg>-Xms256m</jvmArg>
-                        <jvmArg>-Xmx512m</jvmArg>
-                        <jvmArg>-Xss16m</jvmArg>
-                        <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
-                        <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
-                    </jvmArgs>
-                    <javacArgs>
-                        <javacArg>-Xlint:unchecked</javacArg>
-                        <javacArg>-Xlint:deprecation</javacArg>
-                    </javacArgs>
-                    <args>
-                        <arg>-unchecked</arg>
-                        <arg>-deprecation</arg>
-                        <arg>-feature</arg>
-                        <arg>-Yrangepos</arg>
-                        <arg>-Ywarn-unused-import</arg>
-                        <arg>-Xmax-classfile-name</arg>
-                        <arg>140</arg>
-                        <arg>-Xlint:-adapted-args,_</arg>
-                        <arg>-Xfatal-warnings</arg>
-                        <!--<arg>-Xdisable-assertions</arg>-->
-                    </args>
-                </configuration>
-            </plugin>
+<!--            &lt;!&ndash; Scala compiler &ndash;&gt;-->
+<!--            <plugin>-->
+<!--                <groupId>net.alchim31.maven</groupId>-->
+<!--                <artifactId>scala-maven-plugin</artifactId>-->
+<!--                <version>${scala-maven-plugin.version}</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>scala-compile-first</id>-->
+<!--                        <phase>process-resources</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>add-source</goal>-->
+<!--                            <goal>compile</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>scala-test-compile</id>-->
+<!--                        <phase>process-test-resources</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>testCompile</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; Predicated plugin &ndash;&gt;-->
+<!--                    <skip>${scala-maven-plugin.skip}</skip>-->
+<!--                    &lt;!&ndash; Configuration &ndash;&gt;-->
+<!--                    <scalaCompatVersion>${scala.tools.version}</scalaCompatVersion>-->
+<!--                    <scalaVersion>${scala.version}</scalaVersion>-->
+<!--                    <recompileMode>incremental</recompileMode>-->
+<!--                    <useZincServer>true</useZincServer>-->
+<!--                    <compilerPlugins>-->
+<!--                        <compilerPlugin>-->
+<!--                            <groupId>org.scalamacros</groupId>-->
+<!--                            <artifactId>paradise_${scala.version}</artifactId>-->
+<!--                            <version>2.1.0</version>-->
+<!--                        </compilerPlugin>-->
+<!--                    </compilerPlugins>-->
+<!--                    <jvmArgs>-->
+<!--                        <jvmArg>-Xms256m</jvmArg>-->
+<!--                        <jvmArg>-Xmx512m</jvmArg>-->
+<!--                        <jvmArg>-Xss16m</jvmArg>-->
+<!--                        <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>-->
+<!--                        <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>-->
+<!--                    </jvmArgs>-->
+<!--                    <javacArgs>-->
+<!--                        <javacArg>-Xlint:unchecked</javacArg>-->
+<!--                        <javacArg>-Xlint:deprecation</javacArg>-->
+<!--                    </javacArgs>-->
+<!--                    <args>-->
+<!--                        <arg>-unchecked</arg>-->
+<!--                        <arg>-deprecation</arg>-->
+<!--                        <arg>-feature</arg>-->
+<!--                        <arg>-Yrangepos</arg>-->
+<!--                        <arg>-Ywarn-unused-import</arg>-->
+<!--                        <arg>-Xmax-classfile-name</arg>-->
+<!--                        <arg>140</arg>-->
+<!--                        <arg>-Xlint:-adapted-args,_</arg>-->
+<!--                        <arg>-Xfatal-warnings</arg>-->
+<!--                        &lt;!&ndash;<arg>-Xdisable-assertions</arg>&ndash;&gt;-->
+<!--                    </args>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 
             <!-- Eclipse integration -->
             <plugin>
