Emma to Wayang compilation WIP

--- a/wayang-api/wayang-api-emma/pom.xml
+++ b/wayang-api/wayang-api-emma/pom.xml
@@ -663,6 +663,7 @@
     <modules>
         <module>emma-language</module>
         <module>emma-examples</module>
+        <module>emma-wayang</module>
     </modules>
 
 </project>
