--- a/wayang-api/wayang-api-emma/emma-wayang/pom.xml
+++ b/wayang-api/wayang-api-emma/emma-wayang/pom.xml
@@ -88,5 +88,15 @@
             <version>0.6.0-SNAPSHOT</version>
 <!--            <scope>test</scope>-->
         </dependency>
+
+        <!-- HDFS -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+        </dependency>
     </dependencies>
 </project>
