--- a/wayang-api/wayang-api-emma/pom.xml
+++ b/wayang-api/wayang-api-emma/pom.xml
@@ -255,26 +255,26 @@
             </dependency>
 
             <!-- Parquet -->
-            <dependency>
-                <groupId>org.apache.parquet</groupId>
-                <artifactId>parquet-common</artifactId>
-                <version>${parquet.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.parquet</groupId>
-                <artifactId>parquet-encoding</artifactId>
-                <version>${parquet.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.parquet</groupId>
-                <artifactId>parquet-column</artifactId>
-                <version>${parquet.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.parquet</groupId>
-                <artifactId>parquet-hadoop</artifactId>
-                <version>${parquet.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.apache.parquet</groupId>-->
+<!--                <artifactId>parquet-common</artifactId>-->
+<!--                <version>${parquet.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.parquet</groupId>-->
+<!--                <artifactId>parquet-encoding</artifactId>-->
+<!--                <version>${parquet.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.parquet</groupId>-->
+<!--                <artifactId>parquet-column</artifactId>-->
+<!--                <version>${parquet.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.parquet</groupId>-->
+<!--                <artifactId>parquet-hadoop</artifactId>-->
+<!--                <version>${parquet.version}</version>-->
+<!--            </dependency>-->
 
             <!-- CSV -->
             <dependency>
