--- a/wayang-api/wayang-api-emma/emma-wayang/pom.xml
+++ b/wayang-api/wayang-api-emma/emma-wayang/pom.xml
@@ -98,5 +98,21 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
         </dependency>
+
+        <!-- Spark -->
+        <!-- I think this dependency is needed only because of an IntelliJ bug, where the transitive dependency
+             emma-wayang -> wayang-spark -> spark-core is not imported correctly by IntelliJ. Possibly a similar bug to
+             https://youtrack.jetbrains.com/issue/IDEA-98503 -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_${scala.mayor.version}</artifactId>
+            <version>${spark.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.xerial.snappy</groupId>
+                    <artifactId>snappy-java</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
