--- a/wayang-api/wayang-api-emma/emma-language/pom.xml
+++ b/wayang-api/wayang-api-emma/emma-language/pom.xml
@@ -28,6 +28,7 @@
 
     <artifactId>emma-language</artifactId>
     <name>${project.artifactId}</name>
+    <version>0.2-SNAPSHOT</version>
 
     <properties>
         <!-- Predicates -->
